packages/swc/tests/errors/argument_count/input.ts
nameof(console, process);
nameof<Console>(console, process);
nameof<Console, NodeJS.Process>();
nameof<Console, NodeJS.Process>(console);
